--- a/index.html
+++ b/index.html
@@ -1,14 +1,61 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>VideoBackground Creator</title>
+
+    <!-- Primary Meta Tags -->
+    <title>Background Generator - Video Backgrounds Made Easy</title>
+    <meta
+      name="title"
+      content="Background Generator - Video Backgrounds Made Easy"
+    />
+    <meta
+      name="description"
+      content="Generate beautiful thumbnails and backgrounds for your video uploads quickly and easily. Free online tool for content creators."
+    />
+    <meta
+      name="keywords"
+      content="video background generator, thumbnail generator, content creation, video editing, background maker"
+    />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://background-generator.video" />
+    <meta
+      property="og:title"
+      content="Background Generator - Video Backgrounds Made Easy"
+    />
+    <meta
+      property="og:description"
+      content="Generate beautiful thumbnails and backgrounds for your video uploads quickly and easily. Free online tool for content creators."
+    />
+    <meta property="og:image" content="/og-image.jpg" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://background-generator.video" />
+    <meta
+      property="twitter:title"
+      content="Background Generator - Video Backgrounds Made Easy"
+    />
+    <meta
+      property="twitter:description"
+      content="Generate beautiful thumbnails and backgrounds for your video uploads quickly and easily. Free online tool for content creators."
+    />
+    <meta property="twitter:image" content="/og-image.jpg" />
+
+    <!-- Favicon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="manifest" href="/site.webmanifest" />
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#031313" />
+    <meta name="msapplication-TileColor" content="#031313" />
+    <meta name="theme-color" content="#031313" />
   </head>
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
-  
 </html>
